Major overhaul to advanced profiles page